# qn_discriminator

./: .config.sh  .gitignore  CMakeLists.txt  FitHelper.hpp  Fitter.cpp  Fitter.hpp  FitterSimple.cpp  FitterSimple.hpp  GraphExtractor.cpp  GraphExtractor.hpp  Helper.hpp  QnDiscriminatorLinkDef.h  QnToolsHelper.hpp  README.md  ShapeFitter.cpp  ShapeFitter.hpp  Sig2BckgrSimple.cpp  Sig2BckgrSimple.hpp  run.cpp
exe/: CMakeLists.txt  discriminatortensor.cxx  discriminatortensor_v2.cxx  shapetensorwriter_fit.cxx
macro/: fit_dv1dy_rec.C  fit_dv1dy_sim.C  fit_flow.C  fit_shape.C
