#add_executable(shapetensorwriter_fit shapetensorwriter_fit.cxx)
#add_dependencies(shapetensorwriter_fit QnDiscriminator)
#target_link_libraries(shapetensorwriter_fit QnTools::Base ${ROOT_LIBRARIES} QnDiscriminator)

#add_executable(discriminatortensor discriminatortensor.cxx)
#add_dependencies(discriminatortensor QnDiscriminator)
#target_link_libraries(discriminatortensor QnTools::Base ${ROOT_LIBRARIES} QnDiscriminator)

#add_executable(discriminatortensor_v2 discriminatortensor_v2.cxx)
#add_dependencies(discriminatortensor_v2 QnDiscriminator)
#target_link_libraries(discriminatortensor_v2 QnTools::Base ${ROOT_LIBRARIES} QnDiscriminator)

#add_executable(run run.cpp)
#add_dependencies(run QnDiscriminator)
#target_link_libraries(run QnTools::Base ${ROOT_LIBRARIES} QnDiscriminator)

